# lilypad-python

./: .gitignore  CONTRIBUTNG.md  MODULEBUILDER.md  README.md  pyproject.toml
lilypad-sdk/lilypad/: client.py  langchain.py  lilypad_langchain
lilypad-sdk/lilypad/module_builder/: __init__.py  builder.py  config.py  decorators.py  publisher.py  tester.py
lilypad-sdk/lilypad/module_builder/templates/: Dockerfile.j2  download_model.j2  inference_script.j2  module_manifest.j2
lilypad-sdk/lilypad/utils/: __init__.py  supported_models.py
