[project]
name = "lilypad-python"
version = "0.1.0"
description = "The standard library for interaction with lilypad in python"
authors = [
    {name = "mannyuncharted",email = "omoebun52@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain-core (>=0.3.51,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
